--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@solana/spl-token": "^0.4.1",
     "@solana/web3.js": "^1.78.4",
     "@tanstack/react-query": "^5.24.1",
+    "assert": "^2.1.0",
     "big-number": "^2.0.0",
     "buffer": "^6.0.3",
     "eas-cli": "^7.8.2",
     "expo": "~50.0.8",
+    "expo-barcode-scanner": "~12.9.3",
+    "expo-camera": "~14.1.3",
     "expo-clipboard": "~5.0.1",
     "expo-crypto": "~12.8.1",
     "expo-dev-client": "~3.3.11",
