--- a/src/cash-app-program/idl/cash_app.json
+++ b/src/cash-app-program/idl/cash_app.json
@@ -50,6 +50,32 @@
       ]
     },
     {
+      "name": "withdrawFunds",
+      "accounts": [
+        {
+          "name": "cashAccount",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "user",
+          "isMut": true,
+          "isSigner": true
+        },
+        {
+          "name": "systemProgram",
+          "isMut": false,
+          "isSigner": false
+        }
+      ],
+      "args": [
+        {
+          "name": "amount",
+          "type": "u64"
+        }
+      ]
+    },
+    {
       "name": "transferFunds",
       "accounts": [
         {
@@ -68,38 +94,7 @@
           "isSigner": false
         },
         {
-          "name": "owner",
-          "isMut": false,
-          "isSigner": true
-        }
-      ],
-      "args": [
-        {
-          "name": "amount",
-          "type": "u64"
-        }
-      ]
-    },
-    {
-      "name": "withdrawFunds",
-      "accounts": [
-        {
-          "name": "cashAccount",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
           "name": "user",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
-          "name": "systemProgram",
-          "isMut": false,
-          "isSigner": false
-        },
-        {
-          "name": "owner",
           "isMut": false,
           "isSigner": true
         }
@@ -136,101 +131,9 @@
           "type": "publicKey"
         }
       ]
-    },
-    {
-      "name": "createEscrow",
-      "accounts": [
-        {
-          "name": "fromCashAccount",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
-          "name": "toCashAccount",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
-          "name": "escrowAccount",
-          "isMut": true,
-          "isSigner": true
-        },
-        {
-          "name": "systemProgram",
-          "isMut": false,
-          "isSigner": false
-        },
-        {
-          "name": "sender",
-          "isMut": true,
-          "isSigner": true
-        }
-      ],
-      "args": [
-        {
-          "name": "amount",
-          "type": "u64"
-        }
-      ]
-    },
-    {
-      "name": "acceptEscrow",
-      "accounts": [
-        {
-          "name": "toCashAccount",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
-          "name": "escrowAccount",
-          "isMut": true,
-          "isSigner": false
-        }
-      ],
-      "args": []
-    },
-    {
-      "name": "cancelEscrow",
-      "accounts": [
-        {
-          "name": "fromCashAccount",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
-          "name": "escrowAccount",
-          "isMut": true,
-          "isSigner": false
-        }
-      ],
-      "args": []
     }
   ],
   "accounts": [
-    {
-      "name": "EscrowAccount",
-      "type": {
-        "kind": "struct",
-        "fields": [
-          {
-            "name": "balance",
-            "type": "u64"
-          },
-          {
-            "name": "sender",
-            "type": "publicKey"
-          },
-          {
-            "name": "recipient",
-            "type": "publicKey"
-          },
-          {
-            "name": "deadline",
-            "type": "i64"
-          }
-        ]
-      }
-    },
     {
       "name": "CashAccount",
       "type": {
@@ -241,7 +144,7 @@
             "type": "u64"
           },
           {
-            "name": "owner",
+            "name": "user",
             "type": "publicKey"
           },
           {
@@ -249,57 +152,6 @@
             "type": {
               "vec": "publicKey"
             }
-          },
-          {
-            "name": "pendingEscrows",
-            "type": {
-              "vec": "publicKey"
-            }
-          }
-        ]
-      }
-    },
-    {
-      "name": "PaymentRequest",
-      "type": {
-        "kind": "struct",
-        "fields": [
-          {
-            "name": "amount",
-            "type": "u64"
-          },
-          {
-            "name": "sender",
-            "type": "publicKey"
-          },
-          {
-            "name": "recipient",
-            "type": "publicKey"
-          },
-          {
-            "name": "status",
-            "type": {
-              "defined": "RequestStatus"
-            }
-          }
-        ]
-      }
-    }
-  ],
-  "types": [
-    {
-      "name": "RequestStatus",
-      "type": {
-        "kind": "enum",
-        "variants": [
-          {
-            "name": "Pending"
-          },
-          {
-            "name": "Accepted"
-          },
-          {
-            "name": "Rejected"
           }
         ]
       }
@@ -320,14 +172,6 @@
       "code": 6002,
       "name": "Overflow",
       "msg": "An overflow occurred in the balance calculation."
-    },
-    {
-      "code": 6003,
-      "name": "EscrowExpired"
-    },
-    {
-      "code": 6004,
-      "name": "EscrowNotExpiredYet"
     }
   ]
 }
