--- a/src/cash-app-program/idl/cash_app.json
+++ b/src/cash-app-program/idl/cash_app.json
@@ -84,11 +84,6 @@
           "isSigner": false
         },
         {
-          "name": "toCashAccount",
-          "isMut": true,
-          "isSigner": false
-        },
-        {
           "name": "systemProgram",
           "isMut": false,
           "isSigner": false
@@ -100,6 +95,10 @@
         }
       ],
       "args": [
+        {
+          "name": "recipientKey",
+          "type": "publicKey"
+        },
         {
           "name": "amount",
           "type": "u64"
